--- a/public/views/includes/footer.ejs
+++ b/public/views/includes/footer.ejs
@@ -1,20 +1,20 @@
         <!-- FOOTER -->
-        <footer class="bg-dark text-dark pt-1 pb-1 text-center">
+        <footer class="bg-light text-light pt-1 pb-1 text-center">
             <div class="container">
                 <div class="row">
                     <div class="col">
-                        <a href="/impressum" class="text-justify-center" target="_blank" rel="Impressum">
+                        <a href="/impressum" class="text-dark text-justify-center" target="_blank" rel="Impressum">
                             Impressum
                         </a>
                     </div>
                     <div class="col">
-                        <a href="/datenschutz" class="text-justify-center" target="_blank" rel="Datenschutz">
-                            Datenschutz
+                        <a href="/dsgvo" class="text-dark text-justify-center" target="_blank" rel="Datenschutz">
+                            Datenschutz (DSGVO)
                         </a>
                     </div>
                     <div class="col">
-                        <a href="/webDevelopment" class="text-justify-center" target="_blank" rel="webDevelopment">
-                            DSGVO
+                        <a href="/3rdparty" class="text-dark text-justify-center" target="_blank" rel="3rd Party">
+                            Drittanbieter
                         </a>
                     </div>
                 </div>
