--- a/public/views/includes/header.ejs
+++ b/public/views/includes/header.ejs
@@ -19,13 +19,14 @@
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black">
         <meta name="apple-mobile-web-app-title" content="SpreadLove!">
-        <link rel="apple-touch-icon" href="/icons/apple-icon-114x114.png" sizes="114x114">
-        <link rel="apple-touch-icon" href="/icons/apple-icon-120x120.png" sizes="120x120">
-        <link rel="apple-touch-icon" href="/icons/apple-icon-144x144.png" sizes="144x144">
-        <link rel="apple-touch-icon" href="/icons/apple-icon-152x152.png" sizes="152x152">
-        <link rel="apple-touch-icon" href="/icons/apple-icon-180x180.png" sizes="180x180">
+        <link rel="apple-touch-icon" href="/icons/spreadlove_apple_57x57.png" sizes="57x57">
+        <link rel="apple-touch-icon" href="/icons/spreadlove_apple_60x60.png" sizes="60x60">
+        <link rel="apple-touch-icon" href="/icons/spreadlove_apple_76x76.png" sizes="76x76">
+        <link rel="apple-touch-icon" href="/icons/spreadlove_apple_120x120.png" sizes="120x120">
+        <link rel="apple-touch-icon" href="/icons/spreadlove_apple_144x144.png" sizes="144x144">
+        <link rel="apple-touch-icon" href="/icons/spreadlove_apple_180x180.png" sizes="180x180">
         <!-- PWA for IE -->
-        <meta name="msapplication-TileImage" content="/icons/app-icon-144x144.png">
+        <meta name="msapplication-TileImage" content="/icons/spreadlove_256x256.png">
         <meta name="msapplication-TileColor" content="#fff">
         <!-- PWA for all -->
         <meta name="theme-color" content="#3f51b5">
@@ -44,7 +45,7 @@
                     </a> 
 
                     <!-- Button -->
-                    <button class="navbar-toggler btn-round border-dark" type="button" data-toggle="collapse" data-target="#navbartoggle" aria-controls="navbar-toggle">
+                    <button class="navbar-toggler btn-round border-dark mr-5" type="button" data-toggle="collapse" data-target="#navbartoggle" aria-controls="navbar-toggle">
                         <span class="fa fa-bars"></span>
                     </button>
                     <!-- Menü -->
@@ -60,7 +61,7 @@
                                 <a href="#pregnant" class="nav-link">Pregnancy</a>
                             </li>
                             <li class="nav-item">
-                                <a href="#gallery" class="nav-link">Gallery</a>
+                                <a href="#quotes" class="nav-link">Quotes</a>
                             </li>
                             <!-- <li class="nav-item">
                                 <a href="#saysomething" class="nav-link">Say something</a>
