--- a/public/css/index.css
+++ b/public/css/index.css
@@ -12,10 +12,22 @@ body, p {
   font-weight: 300;
   margin: 0;
   padding: 0;
+  /* Medium devices (landscape tablets, 768px and up) */
   /* Überschriften */
   /* Button */
   /* Section */
   /* Hilfsklassen */
+}
+
+@media only screen and (max-width: 768px) {
+  body, p {
+    position: relative;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 300;
+    margin: 0;
+    padding: 0;
+    font-size: 0.9rem;
+  }
 }
 
 body h1,
@@ -33,6 +45,7 @@ p h6,
 p .font-alt {
   font-family: 'Raleway', sans-serif;
   color: #bd45a3;
+  /* Medium devices (landscape tablets, 768px and up) */
 }
 
 body h1.border-line,
@@ -51,6 +64,26 @@ p .font-alt.border-line {
   padding-bottom: .5rem;
 }
 
+@media only screen and (max-width: 768px) {
+  body h1,
+  body h2,
+  body h3,
+  body h4,
+  body h5,
+  body h6,
+  body .font-alt, p h1,
+  p h2,
+  p h3,
+  p h4,
+  p h5,
+  p h6,
+  p .font-alt {
+    font-family: 'Raleway', sans-serif;
+    color: #bd45a3;
+    font-size: 1.4rem;
+  }
+}
+
 body .danceFont, p .danceFont {
   font-family: 'Dancing Script', cursive;
   color: #bd45a3;
@@ -63,6 +96,13 @@ body .btn-round, p .btn-round {
 body section, p section {
   padding-top: 5rem;
   height: 100vh;
+}
+
+@media only screen and (max-width: 768px) {
+  body section, p section {
+    padding: 2rem 0;
+    height: 100vh;
+  }
 }
 
 body .d-relative, p .d-relative {
@@ -146,11 +186,62 @@ button .navbar-toggler {
   /* Medium devices (landscape tablets, 768px and up) */
 }
 
+@media only screen and (max-width: 768px) {
+  .hero-bg {
+    background: url("/img/alicia_hero.png") 5rem 2rem fixed no-repeat;
+    height: 95vh;
+    width: 100%;
+    background-size: contain;
+  }
+}
+
 .hero-section {
   position: absolute;
   top: 40%;
   right: 15%;
   width: auto;
+}
+
+.hero-section h1 {
+  /* Medium devices (landscape tablets, 768px and up) */
+}
+
+@media only screen and (max-width: 768px) {
+  .hero-section h1 {
+    position: absolute;
+    top: 2rem;
+    right: 6.5rem;
+    width: 200px;
+    font-size: 1rem;
+  }
+}
+
+.hero-section p {
+  /* Medium devices (landscape tablets, 768px and up) */
+}
+
+@media only screen and (max-width: 768px) {
+  .hero-section p {
+    position: absolute;
+    top: 10rem;
+    right: 8.5rem;
+    width: 165px;
+    font-size: 0.7rem;
+  }
+}
+
+.hero-section a {
+  /* Medium devices (landscape tablets, 768px and up) */
+}
+
+@media only screen and (max-width: 768px) {
+  .hero-section a {
+    position: absolute;
+    top: 13rem;
+    right: 9.5rem;
+    width: 150px;
+    font-size: 0.7rem;
+  }
 }
 
 .iconDown {
@@ -167,6 +258,15 @@ button .navbar-toggler {
 #aboutUs {
   width: 100%;
   background-color: rgba(240, 240, 240, 0.6);
+  /* Medium devices (landscape tablets, 768px and up) */
+}
+
+@media only screen and (max-width: 768px) {
+  #aboutUs {
+    width: 100%;
+    background-color: rgba(240, 240, 240, 0.6);
+    font-size: .9rem;
+  }
 }
 
 .img-bg {
@@ -183,7 +283,6 @@ button .navbar-toggler {
   height: 100%;
   width: 100%;
   background-size: cover;
-  /* Medium devices (landscape tablets, 768px and up) */
 }
 
 #quotes .rounded-circle {
@@ -207,17 +306,53 @@ button .navbar-toggler {
 }
 
 /*========================= GALLERY =========================*/
-#gallery {
+#quotes {
   width: 100%;
-  height: 80vh;
+  height: 30vh;
   margin: 0;
   padding: 0;
-  background-color: rgba(240, 240, 240, 0.6);
+  background: url("/img/kleine_kanzel_2020_2.jpg") 50% 6rem fixed no-repeat;
+  background-size: cover;
+  /* Medium devices (landscape tablets, 768px and up) */
 }
 
-#gallery .carousel-inner .carousel-item img {
-  height: 80vh;
-  margin: auto;
+@media only screen and (max-width: 768px) {
+  #quotes {
+    width: 100%;
+    height: 30vh;
+    margin: 0;
+    padding: 0;
+    background: url("/img/kleine_kanzel_2020_2.jpg") 66% 13rem fixed no-repeat;
+    background-size: cover;
+  }
+}
+
+#quotes h1 {
+  /* Medium devices (landscape tablets, 768px and up) */
+}
+
+@media only screen and (max-width: 768px) {
+  #quotes h1 {
+    margin-bottom: 0.5rem !important;
+  }
+}
+
+#gallerie-slider p {
+  /* Medium devices (landscape tablets, 768px and up) */
+}
+
+@media only screen and (max-width: 768px) {
+  #gallerie-slider p {
+    font-size: .8rem;
+  }
+}
+
+#gallerie-slider .carousel-indicators {
+  bottom: -2rem;
+}
+
+#gallerie-slider .carousel-indicators li {
+  max-width: 3rem;
 }
 
 /*========================= FOOTER =========================*/
@@ -226,5 +361,25 @@ footer {
   bottom: 0;
   left: 0;
   width: 100%;
+}
+
+footer .container {
+  /* Medium devices (landscape tablets, 768px and up) */
+}
+
+@media only screen and (max-width: 768px) {
+  footer .container {
+    font-size: .7rem;
+  }
+}
+
+footer .container .row .col a {
+  text-decoration: none;
+  -webkit-transition: 1s all ease-in-out;
+  transition: 1s all ease-in-out;
+}
+
+footer .container .row .col a:hover, footer .container .row .col a:focus {
+  text-shadow: 0 0 12px #bd45a3;
 }
 /*# sourceMappingURL=index.css.map */
