--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -80,8 +80,8 @@
         <div class="row justify-content-center mb-5">
 
             <!-- card deck 1 -->
-            <div data-aos="zoom-in-up" class="card-deck">
-                <div class="card">
+            <div class="card-deck">
+                <div data-aos="zoom-in-up" class="card">
                     <img src="/img/section preg/preg_3th_month.jpg" alt="pregnent_3months">
                     <div class="card-body">
                         <h4 class="card-title">drittes Monat</h4>
@@ -119,13 +119,8 @@
                         <small class="text-muted">5 months</small>
                     </div>
                 </div>
-            </div>
             
-            <br>
-
-            <!-- card deck 2 -->
-            <div data-aos="zoom-in-up" class="card-deck">
-                <div class="card">
+                <div data-aos="zoom-in-up" class="card">
                     <img src="/img/section preg/preg_6th_month.jpg" alt="pregnent_6months">
                     <div class="card-body">
                         <h4 class="card-title">Sechs Monate</h4>
@@ -137,8 +132,15 @@
                         <small class="text-muted">6 months</small>
                     </div>
                 </div>
+            
+            </div>
+            
+            <br>
 
-                <div data-aos="zoom-in-up" class="card">
+            <!-- card deck 2 -->
+            <div class="card-deck">
+
+                <div data-aos="zoom-out-down" class="card">
                     <img src="/img/section preg/ohBaby.jpg" alt="placeholder">
                     <div class="card-body">
                         <h4 class="card-title">more to come...</h4>
@@ -151,7 +153,7 @@
                     </div>
                 </div>
 
-                <div data-aos="zoom-in-up" class="card">
+                <div data-aos="zoom-out-down" class="card">
                     <img src="/img/section preg/ohBaby.jpg" alt="placeholder">
                     <div class="card-body">
                         <h4 class="card-title">more to come...</h4>
@@ -163,6 +165,33 @@
                         <small class="text-muted">liegt noch vor uns!</small>
                     </div>
                 </div>
+            
+                <div data-aos="zoom-out-down" class="card">
+                    <img src="/img/section preg/ohBaby.jpg" alt="placeholder">
+                    <div class="card-body">
+                        <h4 class="card-title">more to come...</h4>
+                        <p class="card-text">
+                            <small class="text-muted">* Placeholder</small>
+                        </p>
+                    </div>
+                    <div class="card-footer">
+                        <small class="text-muted">liegt noch vor uns!</small>
+                    </div>
+                </div>
+
+                <div data-aos="zoom-out-down" class="card">
+                    <img src="/img/section preg/ohBaby.jpg" alt="placeholder">
+                    <div class="card-body">
+                        <h4 class="card-title">more to come...</h4>
+                        <p class="card-text">
+                            <small class="text-muted">* Placeholder</small>
+                        </p>
+                    </div>
+                    <div class="card-footer">
+                        <small class="text-muted">liegt noch vor uns!</small>
+                    </div>
+                </div>
+
             </div>
 
             
@@ -173,51 +202,55 @@
 
 <!--===========================================================================
                           GALLERIE                                          -->
-<section id="gallery">
-    <div class="container-fluid">
+<section id="quotes" class="d-relative mt-5 pt-5 mb-5 pb-5">
+    <div class="bg-overlay"></div>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-10">
+                <h1 class="text-center mb-5">Was ich noch sagen wollte...</h1>
+                <div id="gallerie-slider" class="carousel slide text-dark" data-ride="carousel">
+                    <ol class="carousel-indicators text-dark">
+                        <li data-target="#gallerie-slider" data-slide-to="0" class="active bg-dark mr-2"></li>
+                        <li data-target="#gallerie-slider" data-slide-to="1" class="bg-dark mr-2"></li>
+                        <li data-target="#gallerie-slider" data-slide-to="2" class="bg-dark"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                        
+                        <div class="carousel-item active">
+                            <div class="col text-center">
+                                <p class="lead text-dark mb-3">
+                                    Meine Ehefrau ist eine Omsn (österr. für Großmutter)
+                                </p>
+                                <p class="text-uppercase text-muted">&mdash; ASW, <em>Site Owner</em></p>
+                            </div>
+                        </div>
 
+                        <div class="carousel-item">
+                            <div class="col text-center">
+                                <p class="lead text-dark mb-3">
+                                    Nach drei Jahren Ehe ist man schon ein altes Ehepaar!
+                                </p>
+                                <p class="text-uppercase text-muted">&mdash; ASW, <em>Site Owner</em></p>
+                            </div>
+                        </div>
 
-        <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-              <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-              <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-              <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-            </ol>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="/img/kleine_kanzel_2020.jpg" class="d-block" alt="Bild 1/3">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Jahr 2020</h5>
-                  <p class="text-dark">Hohe Wand: kleine Kanzel (2020)</p>
+                        <div class="carousel-item">
+                            <div class="col text-center">
+                                <p class="lead text-dark mb-3">
+                                    Baby-Googool wird die Kleinheit meiner Frau in geschätzt 5-7 Jahren erreicht haben! Sicher? GANZ SICHER!!
+                                </p>
+                                <p class="text-uppercase text-muted">&mdash; ASW, <em>Site Owner</em></p>
+                            </div>
+                        </div>
+
+                    </div> <!-- inner carousel -->
+
+                    <a href="#gallerie-slider" role="button" class="carousel-control-prev text-dark"> <i class="fas fa-arrow-left"  aria-hidden="true"></i> </a>
+                    <a href="#gallerie-slider" role="button" class="carousel-control-next text-dark"> <i class="fas fa-arrow-right" aria-hidden="true"></i> </a>
                 </div>
-              </div>
-              <div class="carousel-item">
-                <img src="/img/gh_kampl_styria.jpg" class="d-block" alt="Bild 2/3">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Sommer 2020</h5>
-                  <p class="text-dark">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="/img/kleine_kanzel_2020_2.jpg" class="d-block" alt="Bild 3/3">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Ebenfalls 2020</h5>
-                  <p class="text-dark">Hohe Wand: kleine Kanzel 2 (2020)</p>
-                </div>
-              </div>
             </div>
-            <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon bg-dark" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-              <span class="carousel-control-next-icon bg-dark" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
-          </div>
-
-
-    </div> 
+        </div>
+    </div>
 </section>
 
 
@@ -226,10 +259,10 @@
 
 
 <!-- PWA Banner -->
-<section>
-    <button class="btnPWAShowBanner">Installation banner anzeigen</button>
-</section>
-
+<!-- 
+<br><br>
+<button class="btnPWAShowBanner">Installation banner anzeigen</button>
+<br><br><br> -->
 
 <!-- FOOTER -->
 <%- include('./includes/footer.ejs') %>
