--- a/public/views/authentication/register.ejs
+++ b/public/views/authentication/register.ejs
@@ -15,8 +15,8 @@
                 <div class="col">
                 
                     <div class="form-group">
-                        <label for="geschlecht">Geschlecht:</label>
-                        <select id="geschlecht" name="geschlecht" class="form-control">
+                        <label for="gender">Geschlecht:</label>
+                        <select id="gender" name="gender" class="form-control">
                             <option value="female">female</option>
                             <option value="male">male</option>
                             <option value="divers">divers</option>
