--- a/public/css/index.css
+++ b/public/css/index.css
@@ -120,10 +120,8 @@ body .bg-overlay, p .bg-overlay {
 
 body #backtotop, p #backtotop {
   position: fixed;
-  width: 1.4rem;
-  height: 1.4rem;
-  bottom: 3.6rem;
-  right: 1rem;
+  bottom: 3rem;
+  right: 3rem;
   z-index: 9999;
 }
 
@@ -131,6 +129,16 @@ body #backtotop a, p #backtotop a {
   text-decoration: none;
   color: #bd45a3;
   font-size: 1.8rem;
+  text-shadow: 0 0 20px gray;
+}
+
+body .btnPWAShowBanner, p .btnPWAShowBanner {
+  position: fixed;
+  bottom: 2.6rem;
+  right: 5rem;
+  font-size: xx-large;
+  z-index: 9999;
+  color: #bd45a3;
   text-shadow: 0 0 20px gray;
 }
 
@@ -283,16 +291,17 @@ button .navbar-toggler {
   width: 100%;
 }
 
-/*========================= QUOTES =========================*/
-.quotes-bg {
+/*========================= Pregnancy =========================*/
+.pregnacy-bg {
   background: url("/img/gh_kampl_styria.jpg") 60% 3rem fixed no-repeat;
   height: 100%;
   width: 100%;
   background-size: cover;
 }
 
-#quotes .rounded-circle {
-  border: 5px solid #535252;
+#pregnant h1 {
+  position: relative;
+  z-index: 9999;
 }
 
 .card-deck .card {
@@ -311,7 +320,7 @@ button .navbar-toggler {
   max-width: 100%;
 }
 
-/*========================= GALLERY =========================*/
+/*========================= Quotes =========================*/
 #quotes {
   width: 100%;
   height: 30vh;
@@ -359,6 +368,12 @@ button .navbar-toggler {
 
 #gallerie-slider .carousel-indicators li {
   max-width: 3rem;
+}
+
+/*========================= COMMENTS =========================*/
+#comments {
+  width: 100%;
+  background-color: rgba(240, 240, 240, 0.6);
 }
 
 /*========================= FOOTER =========================*/
