--- a/public/views/authentication/login.ejs
+++ b/public/views/authentication/login.ejs
@@ -3,10 +3,11 @@
 <%- include('../includes/header.ejs') %>
                
 
+
 <!--======================================================================================
                                     MAIN WINDOW AREA                                   -->
 <main>    
-  <div class="container mt-5 pt-5">
+  <div class="container mt-5 pt-5 mb-5 pb-5">
       <h1 class="border-line">Login to SpreadLove: <%= name %></h1>
 
       <h2>Please enter here your logon credentials:</h2>
