--- a/public/views/includes/header.ejs
+++ b/public/views/includes/header.ejs
@@ -63,9 +63,10 @@
                             <li class="nav-item">
                                 <a href="#quotes" class="nav-link">Quotes</a>
                             </li>
-                            <!-- <li class="nav-item">
-                                <a href="#saysomething" class="nav-link">Say something</a>
-                            </li> -->
+                            <li class="nav-item">
+                                <a href="#comments" class="nav-link">Add comment</a>
+                            </li>
+                            
                             <li class="nav-item <%= !isLoggedIn ? 'showLogin' : 'hideLogin' %>"">
                                 <a href="/authentication/login" class="nav-link">Login</a>
                             </li>
