--- a/public/css/index.css
+++ b/public/css/index.css
@@ -142,6 +142,10 @@ body .btnPWAShowBanner, p .btnPWAShowBanner {
   text-shadow: 0 0 20px gray;
 }
 
+body .errorMessage, p .errorMessage {
+  color: #bd45a3;
+}
+
 /*========================= NAVIGATION =========================*/
 nav {
   -webkit-transition: 1.4s ease-in-out;
@@ -287,7 +291,7 @@ button .navbar-toggler {
   position: absolute;
   overflow: hidden;
   right: 0;
-  top: -5rem;
+  top: 0;
   width: 100%;
 }
 
