--- a/public/views/404.ejs
+++ b/public/views/404.ejs
@@ -1,8 +1,11 @@
 <!-- HEADER -->
 <%- include('./includes/header.ejs') %>
 
-
-<h1 class="border-line"><%= failureTitle %></h1>        
+<div class="container">
+    <div class="row col-lg">
+        <h3 class="errorMessage mt-5 pt-5"><%= message %></h3>        
+    </div>
+</div>
 
 
 <!-- FOOTER -->
