IP Saving und checking

--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -276,7 +276,8 @@
         <h1 class="border-line">Schreibt uns was und lasst Liebe da!</h1>
         <p class="small text-muted">
             Die lezten erfassten Kommentare werden oberhalb im Slider angezeigt.
-
+            Bitte beachte, dass nur ein Eintrag pro Tag erfasst werden kann. 
+            Zudem wird Deine IP-Adresse gespeichert um dies auch zu verifizieren.
         </p>
   
           <form action="/comment" method="POST">
