--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -147,7 +147,7 @@
             <div class="card-deck">
 
                 <div data-aos="zoom-out-down" class="card">
-                    <img src="/img/section preg/ohBaby.jpg" alt="placeholder">
+                    <img src="/img/section preg/preg_placeholder.jpg" alt="placeholder">
                     <div class="card-body">
                         <h4 class="card-title">more to come...</h4>
                         <p class="card-text">
@@ -160,7 +160,7 @@
                 </div>
 
                 <div data-aos="zoom-out-down" class="card">
-                    <img src="/img/section preg/ohBaby.jpg" alt="placeholder">
+                    <img src="/img/section preg/preg_placeholder.jpg" alt="placeholder">
                     <div class="card-body">
                         <h4 class="card-title">more to come...</h4>
                         <p class="card-text">
@@ -173,7 +173,7 @@
                 </div>
             
                 <div data-aos="zoom-out-down" class="card">
-                    <img src="/img/section preg/ohBaby.jpg" alt="placeholder">
+                    <img src="/img/section preg/preg_placeholder2.jpg" alt="placeholder">
                     <div class="card-body">
                         <h4 class="card-title">more to come...</h4>
                         <p class="card-text">
@@ -186,7 +186,7 @@
                 </div>
 
                 <div data-aos="zoom-out-down" class="card">
-                    <img src="/img/section preg/ohBaby.jpg" alt="placeholder">
+                    <img src="/img/section preg/preg_placeholder2.jpg" alt="placeholder">
                     <div class="card-body">
                         <h4 class="card-title">more to come...</h4>
                         <p class="card-text">
